--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
 	<footer>
 
-<img src="./Images_web/header_img/signature.png" height="3%" width="3%" >
+<img src="./Images_web/header_img/signature.png" height="3%" width="3%" > <BR/>
 	
-	Oriane VICECONTE (F1) - 2019
+	<p>	Oriane VICECONTE (F1) - 2019 o.viceconte@ludus-academie.com </p>
 
 	</footer>
 
