'Modifications_apparence-texte'

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<header>
 		<img src="./Images_web/header_img/icone.png" height="8%" width="8%">
-		O'Vide_Gribouille
+		<p id="pHeader" name="pHeader"> O'Vide Gribouille </p>
 
 	</header>
 <br/>
@@ -72,7 +72,7 @@
 
 <img src="./Images_web/header_img/signature.png" height="3%" width="3%" > <BR/>
 	
-	<p>	Oriane VICECONTE (F1) - 2019 o.viceconte@ludus-academie.com </p>
+	<p id="pFooter" name="pFooter">	Oriane VICECONTE (F1) - 2019 o.viceconte@ludus-academie.com </p>
 
 	</footer>
 
