'Modification_apparence_texte'

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <img src="./Images_web/header_img/signature.png" height="3%" width="3%" > <BR/>
 	
-	<p id="pFooter" name="pFooter">	Oriane VICECONTE (F1) - 2019 o.viceconte@ludus-academie.com </p>
+	<p id="pFooter" name="pFooter">	Oriane VICECONTE (F1) - 2019 - o.viceconte@ludus-academie.com </p>
 
 	</footer>
 
